--- a/Views/ReviewTask/Index.cshtml
+++ b/Views/ReviewTask/Index.cshtml
@@ -117,9 +117,8 @@
                                 <tr>
                                     <th class="text-nowrap">Trợ giảng</th>
                                     <th class="text-nowrap">Lớp HP</th>
-                                    <th class="text-nowrap">Điểm số</th>
                                     <th class="text-nowrap">Khối lượng</th>
-                                    <th class="text-nowrap"></th>
+                                    <th class="text-nowrap">Đánh giá</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -141,13 +140,6 @@
                                             Mã LHP: @item.LopHocPhan.MaLHP
                                             <br />
                                             Tên HP: @item.LopHocPhan.TenHP
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            TB Chung: @item.DiemTBTL
-                                            <br />
-                                            Rèn luyện: @item.DiemRL
-                                            <br />
-                                            TK môn: @item.DiemTKMH
                                         </td>
                                         <td valign="middle" class="text-nowrap">
                                             @item.LopHocPhan.CongViec.Count() Công việc
