--- a/Views/ReviewTask/_OpenEditReviewTask.cshtml
+++ b/Views/ReviewTask/_OpenEditReviewTask.cshtml
@@ -30,7 +30,8 @@
                         <tr>
                             <th class="ps-3 text-nowrap">Mô tả công việc</th>
                             <th style="max-width: 120px;" class="ps-3 text-nowrap">Giờ quy đổi</th>
-                            <th class="ps-3 text-nowrap">Thời hạn hoàn thành</th>
+                            <th style="max-width: 120px;" class="ps-3 text-nowrap">Giờ thực tế</th>
+                            <th class="ps-3 text-nowrap">T.Hạn hoàn thành</th>
                             <th class="ps-3 text-nowrap">Nơi làm việc</th>
                             <th class="ps-3 text-nowrap">Kết quả mong đợi</th>
                             <th class="ps-0 pe-0 text-nowrap"></th>
@@ -48,7 +49,10 @@
                                     <div class="form-control">@(item.SoGioQuyDoi)h</div>
                                 </td>
                                 <td valign="middle" class="pe-0 ps-3">
-                                    <div class="form-control">@item.ThoiHanHoanThanh.ToString("dd/MM/yyyy")</div>
+                                    <div class="form-control">@(item.SoGioThucTe)h</div>
+                                </td>
+                                <td valign="middle" class="pe-0 ps-3">
+                                    <div class="form-control">@item.ThoiHanHoanThanh.ToString("yyyy-MM-dd")</div>
                                 </td>
                                 <td valign="middle" class="pe-0 ps-3">
                                     <div class="form-control">@item.NoiLamViec</div>
