--- a/Views/ReviewTask/_OpenEditReviewTask.cshtml
+++ b/Views/ReviewTask/_OpenEditReviewTask.cshtml
@@ -20,7 +20,7 @@
         <div class="col-12">
             <div class="mb-4">
                 <h3 class="text-center mb-0" for="tennganh">DANH SÁCH CÔNG VIỆC TRỢ GIẢNG</h3>
-                <label class="small text-center w-100">(Chọn tất cả công việc được đánh giá là đã hoàn thành, những công việc không được chọn sẽ được đánh giá là chưa hoàn thành.)</label>
+                <em><label class="small text-center w-100">(Chọn tất cả công việc được đánh giá là đã hoàn thành, những công việc không được chọn sẽ được đánh giá là chưa hoàn thành.)</label></em>
             </div>
         </div>
         <div class="col-12">
