--- a/Views/TeachingAssistant/_FilterRegistered.cshtml
+++ b/Views/TeachingAssistant/_FilterRegistered.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<QuanLyCongTacTroGiangKhoaCNTT.Models.UngTuyenTroGiang>
+@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
+    var models = new CongTacTroGiangKhoaCNTTEntities();
     int i = 0;
 }
 
@@ -21,6 +23,9 @@
                 @foreach (var item in Model.ToList().OrderBy(o => o.ID))
                 {
                     i++;
+                    int idtk = item.ID_TaiKhoan;
+                    int idlhp = item.ID_LopHocPhan;
+
                     <tr>
                         <td valign="middle">@i</td>
                         <td valign="middle">
@@ -46,7 +51,11 @@
                             TK môn: @item.DiemTKMH
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            @if (!item.TrangThai)
+                            @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
+                            {
+                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-success">Đã phân công</span>
+                            }
+                            else if (!item.TrangThai)
                             {
                                 <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa được duyệt</span>
                             }
@@ -56,9 +65,18 @@
                             }
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="@item.TrangThai.ToString().ToLower()" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
-                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết & xét duyệt"><i class="bi bi-info-square"></i></span>
-                            </a>
+                            @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) == null)
+                            {
+                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="@item.TrangThai.ToString().ToLower()" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết & xét duyệt"><i class="bi bi-info-square"></i></span>
+                                </a>
+                            }
+                            else
+                            {
+                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="daphancong" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
+                                </a>
+                            }
                         </td>
                     </tr>
                 }
