--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -190,7 +190,7 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="camket">
                             <label class="form-check-label fw-bold" for="camket">
-                                Chọn khi đồng ý chịu toàn bộ trách nhiệm về đề xuất trợ giảng nếu có bất kì vấn đề gì xảy ra trong công tác trợ giảng.
+                                <em>Chọn khi đồng ý chịu toàn bộ trách nhiệm về đề xuất trợ giảng nếu có bất kì vấn đề gì xảy ra trong công tác trợ giảng.</em>
                             </label>
                         </div>
                         <span class="text-danger" id="valid-camket"></span>
