--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -22,17 +22,13 @@
             {
                 Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
             }
-            else if (roleId == 3)
+            else if (roleId == 3 || roleId == 5)
             {
                 Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
             }
             else if (roleId == 4)
             {
                 Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
-            }
-            else if (roleId == 5)
-            {
-                Session["layout"] = "~/Views/Shared/_OfficeOfTrainingLayout.cshtml";
             }
             else
             {
