--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -1,12 +1,17 @@
-﻿
+﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
+    var models = new CongTacTroGiangKhoaCNTTEntities();
+
     ViewBag.Title = "Trang Chủ";
     Layout = Session["layout"].ToString();
+    int roleId = Int32.Parse(Session["user-role-id"].ToString());
+
+
 }
 
 <script src="~/ActiveItemMenu/Dashboard/index.js"></script>
 
-@if (Session["user-role-id"].ToString().Equals("3"))
+@if (roleId == 3 || roleId == 5)
 {
     <section class="container-fluid p-4 ">
         <div class="row">
@@ -189,7 +194,7 @@ else
                             </ol>
                         </nav>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
