--- a/Views/TeachingAssistant/_PhongVanTA.cshtml
+++ b/Views/TeachingAssistant/_PhongVanTA.cshtml
@@ -233,8 +233,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td align="center" valign="middle" colspan="4">
-                                    <h5>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</h5>
+                                <td valign="middle" colspan="4">
+                                    <label>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</label>
                                 </td>
                             </tr>
                             <tr>
@@ -516,8 +516,8 @@ else
                                 </td>
                             </tr>
                             <tr>
-                                <td align="center" valign="middle" colspan="4">
-                                    <h5>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</h5>
+                                <td valign="middle" colspan="4">
+                                    <label>SV đủ điều kiện làm TA khi có ít nhất 8 tiêu chí được đánh giá “đạt” trong đó bắt buộc có tiêu chí 2.</label>
                                 </td>
                             </tr>
                             <tr>
